feature: add userStats with stats,rank and activity score
